# data-processing-app

./: .env  Dockerfile  dbt_project.yml  dirs.py  docker-compose-aux.yml  docker-compose.yaml  docker-compose.yml  params.py  profiles.yml  pyproject.toml  sf_test.py
.github/: .gitignore
.github/workflows/: ci-k8s-cronjob-app-ml.yml  dev-local.yml  hml-docker-with-ci-k8s.yml  hml-docker.yml
airflow/dags/: Untitled-1.json  dbt_dag.py  fast_api_comms.py  mercado_livre.py
db/: create_database.py  create_tables.py  create_warehouse.py  params.py  parsed_data.py
docker/airflow/: Dockerfile
docker/streamlit/: Dockerfile
docker/webscraping-ml/: Dockerfile
docker/webscraping_ml/: Dockerfile
k8s/base/jobs/: cronjob-app-mercadolivre.yml
models/marts/ecommerce/: final_scraped_products.sql
models/raw/: raw_scraped_products.sql
models/raw_data/: raw_scraped_data_source.sql
models/staging/: stg_cleaned_products.sql  stg_scraped_products.sql  stg_v2.sql
sql/snowflake/: create_database.sql  create_tables.sql  create_warehouse.sql
src/: main.py  test_app_mercado_livre_individual.py  test_main.py
src/dbt/: dbt.sql  script.py
src/dbt/models/: schema.yml
src/dbt/models/mart/: mart_scraped_products.sql
src/dbt/models/raw/: raw_scraped_products.sql
src/models/: schema.py
src/webscraping-ml/: app.py  process_data.py
src/webscraping_ml/: app.py  process_data.py
streamlit/: airflow_pipeline.py  app.py  generate_historical_data.py  get_data_from_snowflake_db.py  get_etl_logs.py  main.py  show_detailed_stages_info.py  show_etl_dashboard.py
(+1 files in other folders)
