[tool.poetry]
name = "ecommerce-data-analysis"
version = "0.1.0"
description = ""
authors = ["tabatha wiggers <tatchiwiggers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pytest = "^8.3.2"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
